# internal/transport/http/handler/create_project_target_session.go
@@ -1,0 +1,27 @@
+// Code generated by hertz generator.
+
+package handler
+
+import (
+	"context"
+
+	"github.com/cloudwego/hertz/pkg/app"
+	"github.com/cloudwego/hertz/pkg/protocol/consts"
+	api "github.com/pax-beehive/pax-manager/internal/transport/http/model/paxmanager/api"
+)
+
+// CreateProjectTargetSession .
+// @router /api/v1/user/:user_id/projects/:project_id/targets/:target_id/sessions [POST]
+func CreateProjectTargetSession(ctx context.Context, c *app.RequestContext) {
+	var err error
+	var req api.CreateProjectTargetSessionRequest
+	err = c.BindAndValidate(&req)
+	if err != nil {
+		c.String(consts.StatusBadRequest, err.Error())
+		return
+	}
+
+	resp := new(api.AgentSessionResponse)
+
+	c.JSON(consts.StatusOK, resp)
+}
